--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,10 +5,10 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Copy the requirements file
-COPY requirements.txt .
+COPY ./app/requirements.txt .
 
 # Install the Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r ./app/requirements.txt .
 
 # Copy the application code
 COPY . .
