--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi==0.68.1
-pydantic==1.9.0
-numpy==1.21.0
-tensorflow==2.5.0
+fastapi==0.96.0
+pydantic==1.10.9
+numpy==1.23.5
+tensorflow==2.12.0
+uvicorn==0.22.0
